<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"

    >

   <Button
       android:id="@+id/button2"
       style="@android:style/Widget.Material.Button.Colored"
       android:layout_width="272dp"
       android:layout_height="75dp"
       android:layout_alignParentTop="true"
       android:layout_centerInParent="true"
       android:layout_marginStart="8dp"
       android:layout_marginTop="100dp"
       android:layout_marginBottom="50dp"
       android:fontFamily="@font/couturen"
       android:text="@string/nyc"

       android:textSize="30sp"


       />

   <Button
       android:id="@+id/button3"
       style="@android:style/Widget.Material.Button.Colored"
       android:layout_width="277dp"
       android:layout_height="76dp"
       android:fontFamily="@font/couturen"
       android:text="@string/la"
       android:textSize="30sp"
       android:layout_centerInParent="true"
       android:layout_marginTop="50dp"
       android:layout_marginBottom="50dp"
       />

   <Button
       android:id="@+id/button4"
       style="@android:style/Widget.Material.Button.Colored"
       android:layout_width="277dp"
       android:layout_height="76dp"
       android:layout_centerVertical="true"
       android:layout_centerInParent="true"
       android:layout_alignParentBottom="true"
       android:layout_marginTop="50dp"
       android:layout_marginBottom="100dp"
       android:fontFamily="@font/couturen"
       android:text="@string/lv"
       android:textSize="30sp" />


</RelativeLayout>