<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controller.MainActivity">

    <Button
        android:id="@+id/LoginBtn"
        android:layout_width="119dp"
        android:layout_height="58dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="176dp"
        android:background="@color/colorAccent"
        android:backgroundTint="@color/colorAccent"
        android:backgroundTintMode="src_in"
        android:elevation="2dp"
        android:fontFamily="@font/couture"
        android:text="@string/login"
        android:textColor="@color/colorText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/goldPrice"
        android:layout_width="261dp"
        android:layout_height="53dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="336dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:fontFamily="@font/couture"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:text="@string/email"
        android:textColor="@color/colorText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="262dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:text="@string/Password"
        android:textColor="@color/colorText"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/LoginBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goldPrice"
        app:layout_constraintVertical_bias="0.168" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="181dp"
        android:layout_height="68dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/couture"
        android:inputType="textPersonName"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Welcome To" />

    <EditText
        android:id="@+id/ClubngTxt"
        android:layout_width="221dp"
        android:layout_height="79dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/couture"
        android:inputType="textPersonName"
        android:lineSpacingExtra="10sp"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="45sp"
        app:layout_constraintBottom_toTopOf="@+id/goldPrice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText3"
        app:layout_constraintVertical_bias="0.0"
        tools:text="CLUBNG" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:textColor="@color/colorText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginBtn"
        tools:text="Sign up here" />

</android.support.constraint.ConstraintLayout>